--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="src/style.css ">
 </head>
+
 <body>
     <main class="main">
-        
+        <!--Here displayes all content -->
     </main>
-    
     <script src="src/main.js"></script>
 </body>
+
 </html>
