users count is displayed on an view port

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1 class="users-count">hello</h1>
     <main class="main">
         <!--Here displayes all content -->
     </main>
