--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
-    <h1 class="users-count">hello</h1>
-    <main class="main">
-        <!--Here displayes all content -->
+    <main>
+        <h1 class="users-count"></h1>
+        <section class="section">
+            <!-- User's data here -->
+        </section>
+        <aside class="favorites"></aside>
     </main>
     <script src="src/main.js"></script>
 </body>
