added favorites title

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <section class="section">
             <!-- User's data here -->
         </section>
-        <aside class="favorites"></aside>
+        <aside class="aside">
+            <h2 class="fav-title">Favorites</h2>
+            <div class="favorites"></div>
+        </aside>
     </main>
     <script src="src/main.js"></script>
 </body>
